#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(tinyaml, 0.1, damien.leroux@gmail.com)
AC_CONFIG_SRCDIR([src])
AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_RANLIB
AM_PROG_CC_C_O

# Checks for libraries.
# FIXME: Replace `main' with a function in `-ltinyap':
AC_CHECK_LIB([tinyap], [tinyap_new])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memmove memset strdup])

AC_CONFIG_FILES([Makefile src/Makefile extension/Makefile extension/RTC/Makefile extension/MessageQueue/Makefile])
AC_OUTPUT
