pkginclude_HEADERS = \
		config.h \
                abstract_io.h \
                bml_ops.h \
                code.h \
                containers.h \
                dynarray.h \
                env.h \
                fastmath.h \
                generic_stack.h \
                hashtab.h \
                _impl.h \
                list.h \
                object.h \
                opcode_chain.h \
                opcode_dict.h \
                program.h \
                text_seg.h \
                thread.h \
                vm_assert.h \
                vm_engine.h \
                vm.h \
                vm_types.h

