EXTRA_DIST = \
                debug.asm \
                debug.script \
                hello \
                loop.asm \
                msg.asm \
                mt.asm \
                package.asm \
                rtc.asm \
                rtc.script \
                script_typeless.melang \
                struc.melang \
                struc.routines \
                test2.asm \
                test3.asm \
                test_array.asm \
                test_exception.asm \
                test_exception.script \
                test.asm \
                test.asm_lib \
                test.lib \
                test.script \
                test_struc.asm

