EXTRA_DIST = \
		accents.asm \
                msg.asm \
                rtc.asm \
                rtc2.script \
                struc.routines \
                test_exception.asm \
                test_exception.script \
                test.asm \
                test.script \
		test_IO.asm \
		test_tcpserver.asm \
                test_struc.asm

